# httpredirector

./: Dockerfile  Makefile  README.md  httpredirector.cabal
app/: Main.hs
